--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -460,11 +460,11 @@
 
 <div id='webapp-container'>
             <div id='mobile-menu-content' class='hidden-display'>
-              <a href='#' id='phone-menu-signin' class='phone-menu-list phone-menu-first'>
+              <a href='#' id='phone-menu-signin' class='phone-menu-list'>
                 <img src="/media/app/images/responsive-icon-signin.png" alt='sign in'/>
                 <span>{% trans 'Sign In' %}</span>
               </a>
-              <a href='#' id='phone-menu-profile' class='phone-menu-list phone-menu-first'>
+              <a href='#' id='phone-menu-profile' class='phone-menu-list'>
                 <img src="/media/app/images/portrait1.png" width='28' height='28' alt='profile picture'>
                 <span>Profile</span>
               </a>
@@ -490,6 +490,7 @@
               </a>
             </div>
 
+
             
             <div id='mobile-menu-content-logo' class='hidden-display'>
               <a href='#' id='phone-menu-selection' class='phone-menu-list'>
@@ -509,6 +510,7 @@
                 <span>{% trans 'Favorites' %}</span>
               </a>
             </div>
+
 
             
             <div id='mobile-menu-content-share' class='hidden-display'>
