created actions for share & buy mobile menu

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -521,11 +521,11 @@
 
 
             <div id='mobile-menu-content-share' class='hidden-display'>
-              <a href='#' id='phone-menu-share' class='phone-menu-list'>
+              <a id='phone-menu-share' class='phone-menu-list' data-toggle="modal" href="#modal-share">
                 <img src="/media/app/images/responsive-icon-share.png" alt='share'>
                 <span>{% trans 'Share' %}</span>
               </a>
-              <a href='#' id='phone-menu-buy' class='phone-menu-list'>
+              <a href='#' target='_blank' id='phone-menu-buy' class='phone-menu-list'>
                 <img src="/media/app/images/responsive-icon-buy.png" alt='buy'>
                 <span>{% trans 'Buy song' %}</span>
               </a>
