removed useless file, improved mobile startup

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -393,7 +393,7 @@
 		</div>
 	</div>
 	</div>
-	<div id='submenu-container' >{% include 'yabase/app/common/subMenu.html' %}</div>
+	<div id='submenu-container' >{% include 'yabase/app/common/subMenu.mustache' %}</div>
 
 <div class="modal hide fade" id="modal-share">
     <div class="modal-header">
