--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -25,20 +25,20 @@
 		<div id="sub-header-pointer" class='menu{{submenu_number}}'></div>
         <ul id="sub-header-nav">
             <li class="first {% ifequal submenu_number 1 %}selected{% endifequal %}">
-                <a href='#' class='mobile-selection'></a>
-                <a href='#' id="selection">{% trans "Selection" %}</a>
+                <a href='{% url webapp %}' class='mobile-selection'></a>
+                <a href='{% url webapp %}' id="selection">{% trans "Selection" %}</a>
             </li>
             <li class="{% ifequal submenu_number 2 %}selected{% endifequal %}">
-                <a href='#' class='mobile-top'></a>
-                <a href='#' id='top' >{% trans "Top" %}</a>
+                <a href='{% url webapp_top %}' class='mobile-top'></a>
+                <a href='{% url webapp_top %}' id='top' >{% trans "Top" %}</a>
             </li>
             <li class="{% ifequal submenu_number 3 %}selected{% endifequal %}">
-                <a href='#' class='mobile-friends'></a>
-                <a href='#' id='friends'>{% trans "My friends" %}</a>
+                <a href='{% url webapp_friends %}' class='mobile-friends'></a>
+                <a href='{% url webapp_friends %}' id='friends'>{% trans "My friends" %}</a>
             </li>
             <li class="{% ifequal submenu_number 4 %}selected{% endifequal %}">
-                <a href='#' class='mobile-favorites'></a>
-                <a href='#' id='favorites'>{% trans "Favorites" %}</a>
+                <a href='{% url webapp_favorites %}' class='mobile-favorites'></a>
+                <a href='{% url webapp_favorites %}' id='favorites'>{% trans "Favorites" %}</a>
             </li>
         </ul>
         <div>
@@ -54,7 +54,7 @@
         <div id="sub-header-separation">
         </div>
             {% if request.user.is_authenticated %}
-            <a id="create-radio" href="#">
+            <a id="create-radio" href="{% url webapp_radios %}">
                 <span>{% trans "Create radio" %}</span>
             </a>
             {% endif %}
