--- a/yaapp/templates/yabase/app/friends/friendsPage.mustache
+++ b/yaapp/templates/yabase/app/friends/friendsPage.mustache
@@ -12,7 +12,8 @@
 <div class='row'>
     <div class='span12'>
     	<div class='friends-login-container'>
-    		<img src="/media/app/images/friends-icon-large.png">
+    		<img class='friends-login-large'src="/media/app/images/friends-icon-large.png" height='230' width='260'>
+            <img class='friends-login-small'src="/media/app/images/friends-icon-large.png" height='153' width='173'>
     		<p class='friends-login-p'>{% trans "Log in to view your friends." %}</p>
     		<button id='login-btn'>{% trans "Login" %}</button>
     	</div>
