--- a/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
+++ b/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
@@ -9,7 +9,8 @@
 {% else %}
 <div class='no-margin'>
 	<div class='favorites-login-container'>
-		<img src="/media/app/images/icon-star-big-blue.png">
+		<img class='favorites-login-large'src="/media/app/images/icon-star-big-blue.png" height='164' width='164'>
+		<img class='favorites-login-small' src="/media/app/images/icon-star-big-blue.png" height='100' width='100'>
 		<p class='favorites-login-p'>{% trans "Log in to view your favorites." %}</p>
 		<button id='login-btn'>{% trans "Login" %}</button>
 	</div>
