fixed appearance of friends in friends view

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1953,6 +1953,12 @@ ul .user-cell:hover .caption {
     top: -65px;
 }
 
+.user-cell img {
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+}
+
 #user-menu {
     margin-top: 0px;
     margin-left:0;
@@ -2273,7 +2279,7 @@ ul#notifications {
 
 #favorites-zone {
     max-width: 940px;
-}   
+}
 
 #friends-zone {
     max-width: 940px;
@@ -3589,7 +3595,7 @@ a.yabutton-small {
     }
 
 /*-- HEADER --*/
-    
+
     #mobile-menu-content-logo {
 
     }
@@ -4180,11 +4186,11 @@ a.yabutton-small {
     }
 
 /*-- RADIO-CELL --*/
-        
+
         body .radio-cell {
             margin-left:0px;
         }
-        
+
         .radio-cells li {
             margin-left:3%;
         }
@@ -4198,7 +4204,7 @@ a.yabutton-small {
 
         }
 
-        
+
         .radio-with-stats-cells li .radio-cell,
         .radio-cells li .radio-cell,
         #radios li .radio-cell,
@@ -4207,7 +4213,7 @@ a.yabutton-small {
             height:140px;
         }
 
-        
+
         .radio-with-stats-cells li .radio-cell .radio-container,
         .radio-cells li .radio-cell .radio-container,
         #friends-zone li .radio-cell .radio-container,
@@ -4216,7 +4222,7 @@ a.yabutton-small {
             height:140px;
         }
 
-        
+
         .radio-with-stats-cells li .radio-cell .radio-container .picture,
         .radio-cells li .radio-cell .radio-container .picture,
         #radios li .radio-cell .radio-container .picture,
@@ -4225,7 +4231,7 @@ a.yabutton-small {
             width:140px;
         }
 
-        
+
         .radio-with-stats-cells li .radio-cell .radio-container .picture .caption,
         .radio-cells li .radio-cell .radio-container .picture .caption,
         #favorites li .radio-cell .radio-container .picture .caption,
@@ -4273,7 +4279,7 @@ a.yabutton-small {
         }
 
 /*-- FRIEND-CELL --*/
-    
+
     ul .user-cell,
     ul .mask-user {
         width:115px;
@@ -4282,9 +4288,9 @@ a.yabutton-small {
 
     ul .user-cell .user-cell-inner {
         width:116px;
-        height:116px;  
+        height:116px;
     }
-    
+
     ul .mask-user .caption-user {
         height:75px;
         overflow:hidden;
@@ -4342,11 +4348,11 @@ a.yabutton-small {
     .menu-bg {
 
     }
-    
+
     #mobile-menu-content {
         margin-left: -8px;
         margin-right: -7px;
-        margin-top: -53px; 
+        margin-top: -53px;
     }
 
     .phone-menu-list {
@@ -4370,7 +4376,7 @@ a.yabutton-small {
         color-stop(1, rgb(75,81,85))
         );
     }
-    
+
     .phone-menu-first {
         border-radius:5px 5px 0px 0px;
     }
@@ -4396,7 +4402,7 @@ a.yabutton-small {
     #phone-menu-signin img {
         margin: 10px 12px 0px 13px;
     }
-        
+
     #phone-menu-profile img {
         margin: 7px 12px 0px 13px;
     }
@@ -4449,14 +4455,14 @@ a.yabutton-small {
     #mobile-menu-content-logo {
         margin-left: -14px;
         margin-right: -16px;
-        margin-top: -53px; 
+        margin-top: -53px;
     }
 
 /*-- SHARE MENU --*/
     #mobile-menu-content-share {
         margin-left: -14px;
         margin-right: -16px;
-        margin-top: -53px; 
+        margin-top: -53px;
     }
 
 /*-- FOOTER --*/
@@ -4775,7 +4781,7 @@ a.yabutton-small {
         margin:20px 0px;
     }
 
-    .signup-container #signup-input input, 
+    .signup-container #signup-input input,
     .signup-container #signup-input .right-input {
         width:80%;
         margin: 10px 0%;
@@ -4882,7 +4888,7 @@ a.yabutton-small {
     }
 
     .stats em {
-        font-size: 42px; 
+        font-size: 42px;
     }
 
     .stats .minutes-spent em,
@@ -5039,18 +5045,18 @@ a.yabutton-small {
         display:none;
     }
 /*-- FRIENDS --*/
-    
+
     .profile-background {
         float:left;
         width:100%;
     }
 
 /*-- SETTINGS MENU --*/
-    
+
     #mobile-menu-content {
         margin-left: -14px;
         margin-right: -16px;
-        margin-top: -53px; 
+        margin-top: -53px;
     }
 
     .phone-menu-list {
@@ -5097,7 +5103,7 @@ a.yabutton-small {
             color-stop(1, rgb(54,60,64))
         );
     }
-    
+
     .phone-menu-first {
         border-radius:5px 5px 0px 0px;
     }
@@ -5123,7 +5129,7 @@ a.yabutton-small {
     #phone-menu-signin img {
         margin: 10px 12px 0px 13px;
     }
-        
+
     #phone-menu-profile img {
         margin: 7px 12px 0px 13px;
     }
@@ -5172,19 +5178,19 @@ a.yabutton-small {
         margin:13px 18px 0px 13px;
     }
 /*-- LOGO MENU --*/
-    
+
     #mobile-menu-content-logo {
         margin-left: -14px;
         margin-right: -16px;
-        margin-top: -53px; 
+        margin-top: -53px;
     }
 
 /*-- SHARE MENU --*/
-    
+
     #mobile-menu-content-share {
         margin-left: -14px;
         margin-right: -16px;
-        margin-top: -53px; 
+        margin-top: -53px;
     }
 
 /*-- FOOTER --*/
