--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -3,7 +3,7 @@
 <div id="sub-header">
     <div class="responsive-container visible-phone">
         <a id='responsive-song'href="{% url webapp_radio current_uuid %}" class='yatooltip'>
-            <img id='track-image' src='<% cover %>' width="32" height="32" alt="Radio Picto">
+            <img id='track-image' src='{% if not static %}<% cover %>{% endif %}' width="32" height="32" alt="Radio Picto">
         </a>
         <a id="play-btn">
             <i class="icon-play"></i>
