--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -397,7 +397,7 @@
 		</div>
 	</div>
 	</div>
-	<div id='submenu-container' >{% include 'yabase/app/common/subMenu.mustache' %}</div>
+	<div id='submenu-container' >{% include 'yabase/app/common/subMenu.mustache' with static=1%}</div>
 
 <div class="modal hide fade" id="modal-share">
     <div class="modal-header">
