--- a/yaapp/templates/yabase/app/signup/signup.html
+++ b/yaapp/templates/yabase/app/signup/signup.html
@@ -1,6 +1,7 @@
 {% extends "yabase/webapp.html" %}
 {% load i18n %}
 {% block content %}
-<div class='container' id='webapp-content'/>
+<div class='container' id='webapp-content'>
 {% include 'yabase/app/signup/signup.mustache' %}
+</div>
 {% endblock %}
