updated user pictures for responsive

--- a/yaapp/templates/yabase/app/userCell.mustache
+++ b/yaapp/templates/yabase/app/userCell.mustache
@@ -8,11 +8,13 @@
             <a class='delete-friend'><img alt="delete friend" src="/media/app/images/profile/delete-friend.png"></a>
             <%/is_friend__never%>
 	    </div>
-	</div>
-	<div>
 	    <img class ='big-friend-picture'src='<% picture %>' width='146px' height='146px'/>
 	</div>
 	<div>
 	    <img class='small-friend-picture'src='<% picture %>' width='120px' height='120px'/>
+	</div>
+	<div class='responsive-user-caption'>
+		<h5><% name %></h5>
+		<span><% agc %></span>
 	</div>
 </div>
