--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -4348,6 +4348,10 @@ a.yabutton-small {
         width:65px;
         height:65px;
         border:3px solid white;
+        margin-right:5.3%;
+        margin-left:5.3%;
+        margin-top:4%;
+        margin-bottom:4%;
     }
 
     ul .user-cell:hover,
@@ -4361,10 +4365,13 @@ a.yabutton-small {
     }
 
     ul .mask-user .caption-user {
-        height:28px;
-        overflow:hidden;
-        top: 23px;
-        left: 5px;
+        display:none;
+    }
+
+    .responsive-user-caption {
+        display:block;
+        position:absolute;
+
     }
 
     .caption-user h5,
@@ -4379,11 +4386,6 @@ a.yabutton-small {
 
     #friends-zone ul {
         margin-left:10px;
-    }
-
-    ul .user-cell,
-    ul .mask-user {
-        margin-right:10px;
     }
 
     .profile-background {
@@ -4406,6 +4408,11 @@ a.yabutton-small {
 
     #results {
         margin-left:0px;
+    }
+
+    ul .mask-user {
+        background-color:rgba(0,0,0,0);
+        border:none;
     }
 
 
