--- a/yaapp/templates/yabase/app/radio/track.mustache
+++ b/yaapp/templates/yabase/app/radio/track.mustache
@@ -1,9 +1,9 @@
 {% load i18n %}
    <div id='webapp-track-container'>
 		<div id='webapp-track-picture'>
-       		<img src="<% large_cover %>" width="210px" height="210px"/>
+       		<img src="{{ yasound_song.large_cover_url|default:'<% large_cover %>' }}" width="210px" height="210px"/>
    		</div>
    		<div id='webapp-track-title'>
-            <h2><% title %></h2>
+            <h2>{{ yasound_song.title|default:'<% title %>' }}</h2>
    		</div>
    </div>
