--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -108,10 +108,10 @@
 
 
    <script type="text/html" id="radioTemplate">
-      {% include "yabase/app/radio/radio.mustache" %}
+      {% include "yabase/app/radio/radio.mustache" with radio=None %}
    </script>
    <script type="text/html" id="trackInRadioTemplate">
-      {% include "yabase/app/radio/track.mustache" %}
+      {% include "yabase/app/radio/track.mustache" with yasound_song=None %}
    </script>
 
    <script type="text/html" id="trackTemplate">
