--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -4169,7 +4169,7 @@ a.yabutton-small {
         border:1px solid #085987;
         border-radius:5px;
         box-shadow: inset 0px 1px 1px white;
-    }    
+    }
 
 
 /*-- NOTIFICATIONS --*/
@@ -4437,6 +4437,10 @@ a.yabutton-small {
         border:none;
     }
 
+    #friends-zone .user-cell {
+        margin-right:4.5%;
+        margin-left:4.5%;
+    }  
 
 
 /*-- SETTINGS MENU --*/
