--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -8,7 +8,7 @@
     </div>
 </div>
 <div class='span8 wall-container'>
-    <div id='webapp-wall-input'>{% include "yabase/app/radio/wallInput.mustache" %}</div>
+    <div id='webapp-wall-input'>{% if request.user.is_authenticated %}{% include "yabase/app/radio/wallInput.mustache" %} {% endif %}</div>
     <div>
     <ul id='wall'>
         {% if not wall_events %}
