--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -1,8 +1,8 @@
 {% load i18n %}
 <div class='row'>
 <div class='span4 wall-responsive-span4'>
-    <div id='webapp-track'>{% include "yabase/app/radio/track.mustache" %}</div>
-    <div id='webapp-radio'>{% include "yabase/app/radio/radio.mustache" %}</div>
+    <div id='webapp-track'>{#{% include "yabase/app/radio/track.mustache" %} #}</div>
+    <div id='webapp-radio'>{# {% include "yabase/app/radio/radio.mustache" %} #}</div>
     <div class='well'>
     <ul id='webapp-radio-users' class='thumbnails'></ul>
     </div>
