--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -106,6 +106,7 @@
        var g_page = '{{ g_page }}';
        var g_bootstrapped_data = {% if bdata %}{{ bdata|safe }}{% else %}undefined{% endif %};
        var g_default_radio_uuid = '{{ current_uuid }}';
+       var g_sound_player = '{{ sound_player }}';
     </script>
 
 
