added generic support for other player and platforms
* root is a parameter
* deezer url redirect to webapp with root = '/deezer/'

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -96,6 +96,7 @@
     {% compressed_js 'webapp-all' %}
     <script type="text/javascript">
        moment.lang('{{request.LANGUAGE_CODE}}');
+       var g_root = '{{ root }}';
        var g_authenticated = {% if request.user.is_authenticated %}1{% else %}0{% endif %};
        var g_username = '{% if request.user.is_authenticated %}{{request.user.username}}{% endif %}';
        var g_push_url = '{{ push_url }}';
