--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -76,6 +76,10 @@
     <script type="text/javascript" src='/media/js/sm/soundmanager2-nodebug-jsmin.js'></script>
     {% endifequal %}
 
+    {% ifequal sound_player 'deezer' %}
+    <script type="text/javascript" src="http://cdn-files.deezer.com/js/min/dzapp.js"></script>
+    {% endifequal %}
+
     <script type="text/javascript" src='/media/js/socket.io.js'></script>
 
     <!-- Shim to make HTML5 elements usable in older Internet Explorer versions -->
@@ -603,6 +607,7 @@
 </body>
 {% endblock %}
 
+{% ifnotequal sound_player 'deezer' %}
 <div id="dz-root"></div>
 <script src="http://cdn-files.deezer.com/js/min/dz.js"></script>
 <script>
@@ -611,6 +616,7 @@
     channelUrl : '{{ deezer_channel_url }}'
   });
 </script>
+{% endifnotequal %}
 
 <script type="text/javascript">
 // GOOGLE ANALYTICS
